# distributed-timer

./: .gitignore  CMakeLists.txt  README.md
cmake/: dependencies.cmake
distributed_timer/: merger.cpp  python_bindings.cpp  timer.cpp  timer.h  utils.h
docker/: .bashrc  Dockerfile  docker-compose.yml  install-cmake.sh  install-curl.sh  install-git.sh
docs/: Doxyfile.in
examples/: client.cpp  server.cpp
scripts/: dependencies.py
